<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- APP -->
    <string name="app_name">WWTBAM</string>
    <string name="pref_file">es.serpat.wwtbam_preferences</string>


    <!-- MAIN -->

    <string name="low_settings">Settings</string>
    <string name="low_play">Play</string>
    <string name="play">PLAY</string>
    <string name="settings">SETTINGS</string>
    <string name="scores">SCORES</string>
    <string name="low_scores">Scores</string>
    <string name="about">CREDITS</string>
    <string name="low_about">Credits</string>
    <string name="main">MAIN</string>


    <!-- PLAY -->

    <string name="action_help">JOKERS</string>
    <string name="action_end_game">END GAME</string>
    <string name="pick_joker">Pick a joker</string>
    <string name="next">Next</string>
    <string name="give_up">Give Up</string>
    <string name="you_lost">You lost</string>
    <string name="try_again">Try again. We know you can do it.</string>
    <string name="audience">Audience</string>
    <string name="phone">Phone</string>
    <string name="fifty">Fifty - Fifty</string>
    <string name="default_user_name">Unknown Player</string>
    <string name="sorry">SORRY</string>
    <string name="sorry_message">We are sorry, but you are out of jokers.</string>
    <string name="congratulations_message">You are now a millionaire. Enjoy.</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="right_message">Keep focused. Go ahead. What you want to do?</string>
    <string name="right">WELL DONE</string>
    <string name="ok">OK</string>
    <string name="phone_message">I\'m pretty sure the right answer is the</string>
    <string name="audience_message">The audience thinks the right answer is the</string>


    <!-- SETTING -->
    <string name="pref_title_help">Number of helps</string>
    <string name="pref_help_summary">Select how many times you can ask for help.</string>
    <string name="pref_name_summary">Introduce your name.</string>
    <string name="pref_name_title">Name</string>
    <string name="pref_friends_title">Add friend</string>
    <string name="pref_friends_summary">Add friends to compare scores.</string>
    <string name="friends">FRIENDS</string>
    <string name="action_addFriend">ADD FRIEND</string>

    <string name="current_player">Current Player:\u0020</string>
    <string name="added">\u0020added to your friends!</string>


    <!-- SCORES -->

    <string name="users">ALL USERS</string>
    <string name="local">LOCAL</string>
    <string name="action_delScores">DELETE</string>
    <string name="delete_scores_confirmation">Are you sure you want to delete the local scores?</string>
    <string name="delete_scores">Delete scores</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>


    <!-- ABOUT -->
    <string name="about_text">This app was made for ADM by Sergiu Daniel Marsavela and Patrick Mondria Simoes.</string>







    <string name="understood">UNDERSTOOD</string>
    <string name="finish">FINISH</string>
    <string name="SHARED_PREF_NAME_KEY">playerName</string>
    <string name="SHARED_PREF_NUM_JOKERS">numberJokers</string>
    <string name="ad_new_game">Remember that you\'ll start a new game next time.</string>
    <string name="SHARED_PREF_GAME">isGameSaved</string>
    <string name="SHARED_PREF_QUESTION_NUMBER">questionNumber</string>


    <string name="error_friend_name">Error with Friend name</string>
    <string name="error_friend_name_text">Friend name empty</string>
    <string name="attention">Attention</string>
    <string name="start_new_game_message">You\'re already playing a game. If you change the settings, you\'ll lose the game.</string>
    <string name="not_connected">The device is not connected to the Internet.</string>
    <string name="logo">Logo</string>
    <string name="empty_face">Empty face</string>
    <string name="cancel">CANCEL</string>
    <string name="insert_friend">Enter your friend\'s name</string>

</resources>
