<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="30dp"
    android:gravity="center">

    <TextView
        android:text="@string/app_name"
        android:id="@+id/titleWWTBAM"
        style="@style/textWWTBAM"/>

    <Button
        android:text="@string/play"
        android:id="@+id/butPlay"
        style="@style/button"/>

    <Button
        android:text="@string/settings"
        android:id="@+id/butSettings"
        style="@style/button"/>

    <Button
        android:text="@string/scores"
        android:id="@+id/butScores"
        style="@style/button"/>

    <Button
        android:text="@string/about"
        android:id="@+id/butAbout"
        style="@style/button"/>

</LinearLayout>